# ChangeLog for dev-db/libpq
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/ChangeLog,v 1.60 2006/06/03 12:26:18 killerfox Exp $

  03 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org> libpq-7.4.13.ebuild:
  Stable on hppa. See bug #134168.

  03 Jun 2006; Mark Loeser <halcy0n@gentoo.org> libpq-7.4.13.ebuild,
  libpq-8.0.8.ebuild:
  Stable on x86; bug #134168

  01 Jun 2006; Tobias Scherbaum <dertobi123@gentoo.org> libpq-7.4.13.ebuild,
  libpq-8.0.8.ebuild:
  ppc stable, bug #134168

  01 Jun 2006; Gustavo Zacarias <gustavoz@gentoo.org> libpq-7.4.13.ebuild,
  libpq-8.0.8.ebuild:
  Stable on sparc wrt security #134168

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> libpq-8.0.8.ebuild:
  Stable on alpha wrt security Bug #134168.

  01 Jun 2006; Thomas Cort <tcort@gentoo.org> libpq-7.4.13.ebuild:
  Stable on alpha wrt security Bug #134168.

  31 May 2006; Markus Rothe <corsair@gentoo.org> libpq-7.4.13.ebuild,
  libpq-8.0.8.ebuild:
  Stable on ppc64; bug #134168

  31 May 2006; Konstantin Arkhipov <voxus@gentoo.org> +libpq-8.1.4.ebuild,
  +libpq-8.0.8.ebuild, +libpq-7.4.13.ebuild, +libpq-7.3.15.ebuild:
  Version bump wrt security bug #134168.

  17 Apr 2006; Diego Pettenò <flameeyes@gentoo.org> libpq-8.1.3-r1.ebuild:
  Add ~x86-fbsd keyword.

*libpq-8.1.3-r1 (10 Apr 2006)

  10 Apr 2006; <chrb@gentoo.org> +libpq-8.1.3-r1.ebuild:
  Re-add threads support (bug #120190). This requires the -opt package, this
  can be removed in 8.2.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> libpq-8.0.7.ebuild:
  Mark 8.0.7 stable on ia64

  20 Feb 2006; Joshua Kinard <kumba@gentoo.org> libpq-8.1.3.ebuild:
  Kick 8.1.3 back down to mips unstable -- no need to jump ahead of the other
  archs.

  20 Feb 2006; Joshua Kinard <kumba@gentoo.org> libpq-7.3.14.ebuild,
  libpq-7.4.12.ebuild, libpq-8.0.7.ebuild, libpq-8.1.3.ebuild:
  Marked stable on mips.
