@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.276 2006/06/03 12:37:30 killerfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.277 2006/06/03 15:30:37 killerfox Exp $
+
+  03 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org>
+  postgresql-8.0.8.ebuild:
+  Stable on hppa. See bug #134168.
 
   03 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org>
   postgresql-7.4.13.ebuild:
