@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/libpq
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/ChangeLog,v 1.60 2006/06/03 12:26:18 killerfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/libpq/ChangeLog,v 1.61 2006/06/03 15:28:17 killerfox Exp $
+
+  03 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org> libpq-8.0.8.ebuild:
+  Stable on hppa. See bug #134168.
 
   03 Jun 2006; Rene Nussbaumer <killerfox@gentoo.org> libpq-7.4.13.ebuild:
   Stable on hppa. See bug #134168.
